<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/how_to_play_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
        <TextView
            android:id="@+id/how_to_play_step_0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/how_to_play_step_0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/how_to_step_0"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/how_to_play_step_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/how_to_play_step_0"
            android:layout_marginLeft="20dp"
            android:textColor="@color/how_to_step_others"
            android:text="@string/how_to_play_step_1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/how_to_play_step_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/how_to_play_step_1"
            android:textColor="@color/how_to_step_others"
            android:text="@string/how_to_play_step_2"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/how_to_play_step_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/how_to_play_step_2"
            android:textColor="@color/how_to_step_others"
            android:text="@string/how_to_play_step_3"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        

        <Button
            android:id="@+id/howto_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:text="@string/howto_btn_label" />

</RelativeLayout>
