<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

   <LinearLayout
       android:id="@+id/score_layer"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_weight="1.25"
       android:gravity="clip_horizontal"
       android:orientation="horizontal" >

			<TextView
			    android:id="@+id/high_score_label"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="left"
			    android:layout_marginRight="40dp"
			    android:gravity="left"
			    android:text="@string/score"
			    android:textSize="32sp" />

			<TextView
			    android:id="@+id/score_text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right"
			    android:gravity="right"
			    android:text="@string/initial_score"
			    android:textSize="36sp" />

	</LinearLayout>
	
	<TextView
	    android:id="@+id/count_down_text"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:layout_marginBottom="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_weight="1.09"
	    android:text=""
	    android:textSize="36sp" />

   <LinearLayout
       android:id="@+id/operation_layer"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:layout_marginBottom="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_weight="1.1"
       android:gravity="center"
       android:minHeight="80dip"
       android:orientation="horizontal" >

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/operator_layer"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:layout_weight="1.1"
	    android:baselineAligned="true"
	    android:gravity="center|center_horizontal"
	    android:orientation="horizontal"
	    android:padding="0dp" >

		<ImageButton
		    android:id="@+id/plus_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dp"
		    android:layout_weight="0.8"
		    android:adjustViewBounds="true"
		    android:background="@drawable/empty_background"
		    android:contentDescription="@string/plus_btn_label"
		    android:scaleType="centerInside"
		    android:src="@drawable/plus" />

	    <ImageButton
	        android:id="@+id/minus_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:layout_weight="0.8"
	        android:adjustViewBounds="true"
	        android:background="@drawable/empty_background"
	        android:contentDescription="@string/minus_btn_label"
	        android:scaleType="centerInside"
	        android:src="@drawable/minus" />

		<Button
		    android:id="@+id/clear_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:adjustViewBounds="true"
		    android:background="@drawable/empty_background"
		    android:drawableTop="@drawable/undo"
		    android:text="@string/clear_btn_label"
		    android:textColor="@android:color/white"
		    android:textSize="24sp" />
		
		<Button
		    android:id="@+id/again_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="1.0"
		    android:adjustViewBounds="true"
		    android:background="@drawable/empty_background"
		    android:drawableTop="@drawable/refresh"
		    android:scaleType="centerInside"
		    android:text="@string/again_btn_label"
		    android:textColor="@android:color/white"
		    android:textSize="24sp" />

	</LinearLayout>

   <LinearLayout
       android:id="@+id/temp_layer"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:layout_weight="1.1"
       android:gravity="center"
       android:orientation="horizontal" >

	</LinearLayout>

</LinearLayout>